cleanup with grunt, bower

--- a/app/scripts/content/templates.html
+++ b/app/scripts/content/templates.html
@@ -10,7 +10,7 @@
         <select class="linkedInExt-status" name="status">
             <option value="lead">Lead</option>
             <option value="talk">Talk</option>
-            <option value="reject" >Reject</option>
+            <option value="reject" >Rejected</option>
             <option value="deal" >Deal</option>
         </select>
 
