--- a/app/scripts/content/templates.html
+++ b/app/scripts/content/templates.html
@@ -28,9 +28,9 @@
             <div class="linkedInExt-name"><h2 data-bind="name"></h2></div>
             <div class="linkedInExt-email"><h3 data-bind="email"></h3></div>
         </div>
-        <div class="linkedInExt-status">Status: <span  data-bind="status"></span></div>
-        <div class="linkedInExt-city" >City: <span data-bind="city"></span></div>
-        <div class="linkedInExt-tags" >Tags: <span data-bind="tags"></span></div>
-        <div class="linkedInExt-comment">Comment: <span data-bind="comment"></span></div>
+        <div class="linkedInExt-status" style="padding: 5px 0px;">Status: <span  data-bind="status"></span></div>
+        <div class="linkedInExt-city" style="padding: 5px 0px;">City: <span data-bind="city"></span></div>
+        <div class="linkedInExt-tags" style="padding: 5px 0px;">Tags: <span data-bind="tags"></span></div>
+        <div class="linkedInExt-comment" style="padding: 5px 0px;">Comment: <span data-bind="comment"></span></div>
     </div>
 </div>
