--- a/app/scripts/profiles/index.html
+++ b/app/scripts/profiles/index.html
@@ -18,7 +18,13 @@
                 </li>
             </ul>
 
-            <button class="waves-effect waves-light btn" ng-click="backupContent()">Backup content</button>
+            <button class="waves-effect waves-light btn" ng-click="backupContent()">Backup Content</button>
+            <button class="waves-effect waves-light btn" ng-click="backup.show = !backup.show">Upload Backup</button>
+            <div ng-if="backup.show">
+              <textarea ng-model="backup.data"></textarea>
+
+              <button class="waves-effect waves-light btn red" ng-click="restore()">Restore Backup</button>
+            </div>
         </div>
         <script type="text/javascript" src="../libs/jquery/dist/jquery.min.js"></script>
         <script src="../libs/materialize/dist/js/materialize.min.js"></script>
