--- a/app/scripts/profiles/index.html
+++ b/app/scripts/profiles/index.html
@@ -29,6 +29,7 @@
         <script type="text/javascript" src="../libs/jquery/dist/jquery.min.js"></script>
         <script src="../libs/materialize/dist/js/materialize.min.js"></script>
         <script src="../libs/angular/angular.min.js"></script>
+        <script src="../libs/angular-i18n/angular-locale_pl-pl.js"></script>
          <script src="../libs/lodash/lodash.min.js"></script>
         <script src="app.js"></script>
         <script src="directives.js"></script>
