added more lead states

--- a/app/scripts/content/templates.html
+++ b/app/scripts/content/templates.html
@@ -9,9 +9,15 @@
         </div>
         <select class="linkedInExt-status" name="status">
             <option value="lead">Lead</option>
-            <option value="talk">Talk</option>
-            <option value="reject" >Rejected</option>
-            <option value="deal" >Deal</option>
+            <option value="contacted">Contacted</option>
+            <option value="positive-responded-interested">Positive: Responded & Interested</option>
+            <option value="negative-responded-not-interested">Negative: Responded, not interested</option>
+            <option value="negative-responded-reject" >Negative: Responded, but rejected</option>
+            <option value="positive-interested-in-future">Positive: Responded, interested in Future</option>
+            <option value="positive-demo-scheduled" >Positive: Demo Scheduled</option>
+            <option value="positive-after-demo-deal-now" >Positive: After Demo DEAL NOW</option>
+            <option value="positive-after-demo-deal-in-future" >Positive: After Demo DEAL in Future</option>
+            <option value="negative-after-demo-rejected" >Negative: After Demo Rejected</option>
         </select>
 
         <div class="linkedInExt-city input  clearfix">
